--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ h1{
 }
 section{
 display: flex;
+margin-bottom: 100px;
 }
 .half-width{
     padding-left: 5%;
@@ -31,5 +32,9 @@ width: 100%;
 .top-banner{
     background-image: url(images/Frame\ 59.jpg);
     
+    background-repeat: no-repeat;
+}
+.dream-big{
+    background-image: url(images/Frame\ 57.jpg);
     background-repeat: no-repeat;
 }
